# heatitup-complete

./: README.org  find-duplication-complete.cabal  heatitup-complete.cabal  stack.yaml
app/: Main.hs
src/: Blast.hs  Merge.hs  Parse.hs  Types.hs  Utility.hs
